feat: templates, ls.update, handleThemeSwitch, remove listeners

--- a/templates/style/media.css
+++ b/templates/style/media.css
@@ -35,3 +35,9 @@ main {
   --bg-light-color: #2a2f35;
   --fg-color: #ffffff;
 }
+
+html {
+  background-color: var(--bg-color);
+  color: var(--fg-color);
+  font-family: sans-serif;
+}
